--- a/GbsoDevExagonalTemplate.Domain/GbsoDevExagonalTemplate.Domain.csproj
+++ b/GbsoDevExagonalTemplate.Domain/GbsoDevExagonalTemplate.Domain.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Entities\ValidationRules\ValidationRulesResx.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ValidationRulesResx.resx</DependentUpon>
+    </Compile>
     <Compile Update="EntityValidationRules\ValidationRulesResx.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -20,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Entities\ValidationRules\ValidationRulesResx.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ValidationRulesResx.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="EntityValidationRules\ValidationRulesResx.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ValidationRulesResx.Designer.cs</LastGenOutput>
