--- a/GbsoDevExagonalTemplate.Api/GbsoDevExagonalTemplate.Api.csproj
+++ b/GbsoDevExagonalTemplate.Api/GbsoDevExagonalTemplate.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>d6c0029f-bf66-406f-8f43-f509710e5ee9</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
