--- a/GbsoDevExagonalTemplate.Api/Properties/launchSettings.json
+++ b/GbsoDevExagonalTemplate.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5210"
+      "applicationUrl": "https://localhost:7146;http://localhost:5210"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -22,7 +22,8 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
@@ -31,7 +32,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:44445",
-      "sslPort": 0
+      "sslPort": 44365
     }
   }
 }
