--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,8 +4,13 @@ services:
   gbsodevexagonaltemplate.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "80"
+      - 80:80
+      - 443:443
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
     depends_on:
       - exagonal-app-database
   exagonal-app-database:
