--- a/assets/api-assets/appsettings.Development.json
+++ b/assets/api-assets/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "connection-db": "Server=localhost,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;",
+    "connection-db": "Server=template-exagonal-database,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;",
+    "connection-db-local": "Server=localhost,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;"
   },
   "AuthOptions": {
     "Issuer": "ExagonalApp",
