--- a/assets/api-assets/appsettings.Development.json
+++ b/assets/api-assets/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
+  "DbType": "InMemory",
   "ConnectionStrings": {
     "connection-db": "Server=template-exagonal-database,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;",
-    "connection-db-local": "Server=localhost,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;"
+    "connection-db-local": "Server=localhost,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;",
+    "in-memory-db-name": "template-exagonal-in-memory-database"
   },
   "AuthOptions": {
     "Issuer": "ExagonalApp",
