--- a/assets/api-assets/appsettings.json
+++ b/assets/api-assets/appsettings.json
@@ -1,6 +1,7 @@
 {
+  "DbType": "MSSQL",
   "ConnectionStrings": {
-    "connection-db": "Server=template-exagonal-database,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;"
+    "connection-db": "Server=template-exagonal-database,1433;Database=exagonal_app_db;User Id=sa;Password=pass@template-exagonal-database93;TrustServerCertificate=True;",
   },
   "AllowedHosts": "*",
   "AuthOptions": {
