--- a/GbsoDevExagonalTemplate.Infrastructure/GbsoDevExagonalTemplate.Infrastructure.csproj
+++ b/GbsoDevExagonalTemplate.Infrastructure/GbsoDevExagonalTemplate.Infrastructure.csproj
@@ -19,7 +19,6 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.20" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
@@ -30,6 +29,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GbsoDevExagonalTemplate.Application\GbsoDevExagonalTemplate.Application.csproj" />
+    <ProjectReference Include="..\GbsoDevExagonalTemplate.Data.EfCore.InMemory\GbsoDevExagonalTemplate.Data.EfCore.InMemory.csproj" />
+    <ProjectReference Include="..\GbsoDevExagonalTemplate.Data.EfCore.MSSQL\GbsoDevExagonalTemplate.Data.EfCore.MMSQL.csproj" />
     <ProjectReference Include="..\GbsoDevExagonalTemplate.Data.EfCore\GbsoDevExagonalTemplate.Data.EfCore.csproj" />
     <ProjectReference Include="..\GbsoDevExagonalTemplate.Domain\GbsoDevExagonalTemplate.Domain.csproj" />
     <ProjectReference Include="..\GbsoDevExagonalTemplate.Dtos\GbsoDevExagonalTemplate.Dtos.csproj" />
